Fix: remove internal scrollbar

--- a/components/rsptx/templates/staticAssets/course.css
+++ b/components/rsptx/templates/staticAssets/course.css
@@ -1,9 +1,3 @@
-.assignment_chooser {
-    max-height: 400px;
-    overflow-y: scroll;
-    margin-bottom: 20px;
-}
-
 .course_page {
     width: 90%;
     margin-left: auto;
